--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Dice game</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-  <body>
 
-<div id="dice-area"></div>
+<head>
+  <meta charset="utf-8" />
+  <title>Dice game</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
-<!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+<body>
 
-<!-- Load our React component. -->
-<script src="dice.js"></script>
+  <div id="dice-area"></div>
+
+  <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+
+  <script src="dice.js"></script>
 
 </body>
